--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<meta name="title" content="" />
-	<meta name="description" content="" />
+	<title>The SoulSellerS</title>
+	<meta name="title" content="The SoulSellerS" />
+	<meta name="description" content="The SoulSellerS website" />
 	<link rel="shortcut icon" id="favicon" href="resources/img/favicon.png"> 
-	<meta name="author" content="">
-	<link rel="canonical" href="" />
+	<meta name="author" content="daron1337-R4y11">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
