fixed favicon link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>The SoulSellerS</title>
 	<meta name="title" content="The SoulSellerS" />
 	<meta name="description" content="The SoulSellerS website" />
-	<link rel="shortcut icon" id="favicon" href="resources/img/favicon.png"> 
+	<link rel="shortcut icon" id="favicon" href="resources/img/favicon.ico"> 
 	<meta name="author" content="daron1337-R4y11">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
