added transition on social bar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		  	    <a href="https://www.facebook.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/facebook-logo.png" alt="facebook" class="img-rounded"></a>
 		  	    <a href="https://www.twitter.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/twitter-logo.png" alt="twitter" class="img-rounded"></a>
 		  	    <a href="https://soundcloud.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/soundcloud-logo.png" alt="soundcloud" class="img-rounded"></a>
-		  	    <a href="http://www.youtube.com/channel/UC9xK9W45VHdry6DYTpOia4Q" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/youtube-logo.png" alt="..." class="img-rounded"></a>
-		  	    <a href="https://plus.google.com/u/1/b/115881002461468086112/115881002461468086112/posts" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/googleplus-logo.png" alt="..." class="img-rounded"></a>
+		  	    <a href="http://www.youtube.com/channel/UC9xK9W45VHdry6DYTpOia4Q" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/youtube-logo.png" alt="youtube" class="img-rounded"></a>
+		  	    <a href="https://plus.google.com/u/1/b/115881002461468086112/115881002461468086112/posts" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/googleplus-logo.png" alt="google+" class="img-rounded"></a>
 		  	    <a href="https://instagram.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/instagram-logo.png" alt="instagram" class="img-rounded"></a>
 	  	    </div>
 	  	</div>
@@ -57,12 +57,12 @@
 	      <div class="row">
 	  	    <div class="col-md-8"></div>
 	  	    <div class="col-md-4" id="follow-us">
-		  	    <a href="https://www.facebook.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/facebook-logo.png" alt="facebook" class="img-rounded"></a>
-		  	    <a href="https://www.twitter.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/twitter-logo.png" alt="twitter" class="img-rounded"></a>
-		  	    <a href="https://soundcloud.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/soundcloud-logo.png" alt="soundcloud" class="img-rounded"></a>
-		  	    <a href="http://www.youtube.com/channel/UC9xK9W45VHdry6DYTpOia4Q" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/youtube-logo.png" alt="..." class="img-rounded"></a>
-		  	    <a href="https://plus.google.com/u/1/b/115881002461468086112/" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/googleplus-logo.png" alt="..." class="img-rounded"></a>
-		  	    <a href="https://instagram.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/instagram-logo.png" alt="instagram" class="img-rounded"></a>
+		  	    <a href="https://www.facebook.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/facebook-logo.png" alt="facebook" class="scale"></a>
+		  	    <a href="https://www.twitter.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/twitter-logo.png" alt="twitter" class="scale"></a>
+		  	    <a href="https://soundcloud.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/soundcloud-logo.png" alt="soundcloud" class="scale"></a>
+		  	    <a href="http://www.youtube.com/channel/UC9xK9W45VHdry6DYTpOia4Q" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/youtube-logo.png" alt="youtube" class="scale"></a>
+		  	    <a href="https://plus.google.com/u/1/b/115881002461468086112/115881002461468086112/posts" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/googleplus-logo.png" alt="google+" class="scale"></a>
+		  	    <a href="https://instagram.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/instagram-logo.png" alt="instagram" class="scale"></a>
 	  	    </div>
 	  	  </div>
 	
@@ -77,12 +77,12 @@
 	      <div class="row">
 	  	    <div class="col-md-8"></div>
 	  	    <div class="col-md-4" id="follow-us">
-		  	    <a href="https://www.facebook.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/facebook-logo.png" alt="facebook" class="img-rounded"></a>
-		  	    <a href="https://www.twitter.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/twitter-logo.png" alt="twitter" class="img-rounded"></a>
-		  	    <a href="https://soundcloud.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/soundcloud-logo.png" alt="soundcloud" class="img-rounded"></a>
-		  	    <a href="http://www.youtube.com/channel/UC9xK9W45VHdry6DYTpOia4Q" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/youtube-logo.png" alt="..." class="img-rounded"></a>
-		  	    <a href="https://plus.google.com/u/1/b/115881002461468086112/" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/googleplus-logo.png" alt="..." class="img-rounded"></a>
-		  	    <a href="https://instagram.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/instagram-logo.png" alt="instagram" class="img-rounded"></a>
+		  	    <a href="https://www.facebook.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/facebook-logo.png" alt="facebook" class="scale"></a>
+		  	    <a href="https://www.twitter.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/twitter-logo.png" alt="twitter" class="scale"></a>
+		  	    <a href="https://soundcloud.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/soundcloud-logo.png" alt="soundcloud" class="scale"></a>
+		  	    <a href="http://www.youtube.com/channel/UC9xK9W45VHdry6DYTpOia4Q" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/youtube-logo.png" alt="youtube" class="scale"></a>
+		  	    <a href="https://plus.google.com/u/1/b/115881002461468086112/115881002461468086112/posts" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/googleplus-logo.png" alt="google+" class="scale"></a>
+		  	    <a href="https://instagram.com/soulsellers" target="_blank"><img style="width: 40px; height: 40px;" src="resources/img/instagram-logo.png" alt="instagram" class="scale"></a>
 	  	    </div>
 	  	  </div>
 
