--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
 
           <div class="page_container">
             <!-- SoundCloud Player-->    
-            <iframe width="70%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/21414850&amp;color=325274&amp;auto_play=true&amp;show_artwork=false"></iframe>
-  	        <!--<iframe width="70%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129638018&amp;color=325274&amp;auto_play=true&amp;show_artwork=false"></iframe>--> 
+            <!--<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/67103126&amp;color=325274&amp;auto_play=true&amp;show_artwork=true"></iframe>-->
+            <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/21414850&amp;color=325274&amp;auto_play=true&amp;show_artwork=true"></iframe>
+  	        <!-- <iframe width="70%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129638018&amp;color=325274&amp;auto_play=false&amp;show_artwork=true"></iframe>--> 
   	      </div>
   	      
   	    </section><!-- end section .page1 -->
