--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
+	<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -40,8 +43,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  The SoulSellerS
+                <a id="soulsellers-title" class="navbar-brand page-scroll" href="#page-top">
+                      The SoulSellerS
                 </a>
             </div>
 
@@ -75,9 +78,13 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading"></h1>
-                        <p class="intro-text">
+                        <!-- <p class="intro-text">
+						  Pallottole e Lacrime EP OUT NOW
                           <iframe width="100%" height="480" src="https://www.youtube.com/embed/dtf5fuTkbsA?autoplay=1" frameborder="0" allowfullscreen></iframe>
-                        </p>
+                        </p> -->
+						<p class="intro-text-before">
+						Pallottole e Lacrime EP </br> 24 Ottobre 2015
+						</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,31 +97,42 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Us</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            <div class="col-lg-12">
+                <img class="img-responsive" src="img/about.jpg"></img>
+				
             </div>
+			<div id="description" class="col-lg-6 col-lg-offset-3">
+			<p>The SoulSellerS è un progetto musicale progressive post-punk da Bergamo.<br>
+				Dede alla batteria, Simone al basso, Davide alla voce, Leo alla chitarra e voce e Matteo alla chitarra.
+			</p>
+			</div>
         </div>
     </section>
 
     <!-- Download Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
+			<div class="container">
+				<img class="img-responsive" src="img/downloads-bg.jpg"></img>
+			</div>
             <div class="container">
-                <div class="col-lg-4 col-lg-offset-1">
+                <!-- <div id="music-stream" class="col-lg-8 col-lg-offset-2">
                     <p>
-                      <iframe width="100%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/74292583&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                      <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/74292583&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                     </p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-1">
-                    <p><i class="fa fa-music fa-2x"> iTunes</i></p>
-                    <p><i class="fa fa-spotify fa-2x"> Spotify</i></p>
-                    <p><i class="fa fa-apple fa-2x"> Apple Music</i></p>
-                    <p><i class="fa fa-amazon fa-2x"> Amazon Music</i></p>
-                    <p><i class="fa fa-play fa-2x"> Google Play</i></p>
-                </div>
+                <div class="col-lg-2 col-lg-offset-2">
+                    <p><i class="fa fa-music"> iTunes</i></p>
+				</div>
+				<div class="col-lg-2">
+                    <p><i class="fa fa-spotify"> Spotify</i></p>
+				</div>
+				<div class="col-lg-2">
+                    <p><i class="fa fa-amazon"> Amazon Music</i></p>
+				</div>
+				<div class="col-lg-2">
+                    <p><i class="fa fa-play"> Google Play</i></p>
+				</div> -->
             </div>
         </div>
     </section>
@@ -122,7 +140,7 @@
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
-            <img class="responsive" src="img/souls2.jpg"></img>
+            <img src="img/souls2.jpg"></img>
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Us!</h2>
                 <!-- <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p> -->
