--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
-	
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -83,7 +83,7 @@
                           <iframe width="100%" height="480" src="https://www.youtube.com/embed/dtf5fuTkbsA?autoplay=1" frameborder="0" allowfullscreen></iframe>
                         </p> -->
 						<p class="intro-text-before">
-						Pallottole e Lacrime EP </br> 24 Ottobre 2015
+						Pallottole e Lacrime EP </br> In arrivo...
 						</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -99,11 +99,13 @@
         <div class="row">
             <div class="col-lg-12">
                 <img class="img-responsive" src="img/about.jpg"></img>
-				
+
             </div>
 			<div id="description" class="col-lg-6 col-lg-offset-3">
-			<p>The SoulSellerS è un progetto musicale progressive post-punk da Bergamo.<br>
+			<p>The SoulSellerS è un progetto musicale progressive post-punk.<br>
 				Dede alla batteria, Simone al basso, Davide alla voce, Leo alla chitarra e voce e Matteo alla chitarra.
+      </p>
+      <p><i>"Senza musica la vita sarebbe un errore"</i>
 			</p>
 			</div>
         </div>
@@ -148,13 +150,16 @@
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://www.facebook.com/soulsellers" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/soulsellers" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/soulsellers" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                        <a href="https://www.instagram.com/soulsellers" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                     <li>
-                        <a href="https://www.twitter.com/soulsellers" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://www.twitter.com/soulsellers" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="http://www.rockit.it/thesoulsellers" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-music fa-fw"></i> <span class="network-name">Rockit</span></a>
                     </li>
                 </ul>
             </div>
