--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="description" content="">
     <meta name="author" content="The SoulSellerS">
 
@@ -21,9 +21,9 @@
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-	<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+	  <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+	  <link href='https://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
+	  <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,7 +76,7 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
+                    <div class="col-sm-12 col-md-8 col-md-offset-2">
                         <h1 class="brand-heading"></h1>
                         <!-- <p class="intro-text">
 						  Pallottole e Lacrime EP OUT NOW
@@ -97,11 +97,11 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-sm-12 col-lg-12">
                 <img class="img-responsive" src="img/about.jpg"></img>
 
             </div>
-			<div id="description" class="col-lg-6 col-lg-offset-3">
+			<div id="description" class="col-sm-10 col-sm-offset-1 col-lg-6 col-lg-offset-3">
 			<p>The SoulSellerS è un progetto musicale progressive post-punk.<br>
 				Dede alla batteria, Simone al basso, Davide alla voce, Leo alla chitarra e voce e Matteo alla chitarra.
       </p>
@@ -143,7 +143,7 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <img src="img/souls2.jpg"></img>
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-sm-12 col-lg-8 col-lg-offset-2">
                 <h2>Contact Us!</h2>
                 <!-- <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p> -->
                 <p><a href="mailto:soulsellersband@gmail.com">soulsellersband@gmail.com</a>
