new graphic for EP

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a id="soulsellers-title" class="navbar-brand page-scroll" href="#page-top">
-                      The SoulSellerS
+                  <img id="soul-title" class="img-responsive hidden" src="img/soulseller-logo.jpg"></img>
                 </a>
+                <!-- <a id="soulsellers-title" class="navbar-brand page-scroll" href="#page-top">
+                      The SoulSellerS
+                </a> -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,12 +84,15 @@
 						  Pallottole e Lacrime EP OUT NOW
                           <iframe width="100%" height="480" src="https://www.youtube.com/embed/dtf5fuTkbsA?autoplay=1" frameborder="0" allowfullscreen></iframe>
                         </p> -->
-						<p class="intro-text-before">
-						Pallottole e Lacrime EP </br> In arrivo...
-						</p>
+                        <p class="intro-text-before">
+                        Novembre 2015
+                        </p>
                         <a href="#about" class="btn btn-circle page-scroll">
+
                             <i class="fa fa-angle-double-down animated"></i>
+
                         </a>
+
                     </div>
                 </div>
             </div>
