--- a/index.html
+++ b/index.html
@@ -122,26 +122,27 @@
 			<div class="container">
 				<img class="img-responsive" src="img/downloads-bg.jpg"></img>
 			</div>
-            <div class="container">
-                <!-- <div id="music-stream" class="col-lg-8 col-lg-offset-2">
-                    <p>
-                      <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/74292583&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                    </p>
-                </div>
-                <div class="col-lg-2 col-lg-offset-2">
-                    <p><i class="fa fa-music"> iTunes</i></p>
-				</div>
-				<div class="col-lg-2">
-                    <p><i class="fa fa-spotify"> Spotify</i></p>
-				</div>
-				<div class="col-lg-2">
-                    <p><i class="fa fa-amazon"> Amazon Music</i></p>
-				</div>
-				<div class="col-lg-2">
-                    <p><i class="fa fa-play"> Google Play</i></p>
-				</div> -->
-            </div>
+        <div class="container">
+          <div id="music-stream" class="col-lg-8 col-lg-offset-2">
+            <p>
+              <!-- <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/74292583&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
+              <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+            </p>
+          </div>
+          <!-- <div class="col-sm-2 col-sm-offset-2">
+            <p><i class="fa fa-music"> iTunes</i></p>
+		      </div>
+		      <div class="col-sm-2">
+            <p><i class="fa fa-spotify"> Spotify</i></p>
+		      </div>
+		      <div class="col-sm-2">
+            <p><i class="fa fa-amazon"> Amazon Music</i></p>
+		      </div>
+		      <div class="col-sm-2">
+            <p><i class="fa fa-play"> Google Play</i></p>
+		      </div> -->
         </div>
+      </div>
     </section>
 
     <!-- Contact Section -->
