--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                     <div class="col-sm-12 col-md-8 col-md-offset-2">
                         <h1 class="brand-heading"></h1>
                         <!-- <p class="intro-text">
-						  Pallottole e Lacrime EP OUT NOW
-                          <iframe width="100%" height="480" src="https://www.youtube.com/embed/dtf5fuTkbsA?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="100%" height="480" src="" frameborder="0" allowfullscreen></iframe>
                         </p> -->
                         <p class="intro-text-before">
-                        Novembre 2015
+                        <!-- Novembre 2015 -->
+                        
                         </p>
                         <a href="#about" class="btn btn-circle page-scroll">
 
@@ -118,10 +118,10 @@
 
     <!-- Download Section -->
     <section id="download" class="content-section text-center">
-        <div class="download-section">
-			<div class="container">
-				<img class="img-responsive" src="img/downloads-bg.jpg"></img>
-			</div>
+      <div class="download-section">
+			  <div class="container">
+				  <img class="img-responsive" src="img/downloads-bg.jpg"></img>
+			  </div>
         <div class="container">
           <div id="music-stream" class="col-lg-8 col-lg-offset-2">
             <p>
@@ -130,18 +130,90 @@
               <!-- <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
             </p>
           </div>
-          <!-- <div class="col-sm-2 col-sm-offset-2">
-            <p><i class="fa fa-music"> iTunes</i></p>
-		      </div>
-		      <div class="col-sm-2">
-            <p><i class="fa fa-spotify"> Spotify</i></p>
-		      </div>
-		      <div class="col-sm-2">
-            <p><i class="fa fa-amazon"> Amazon Music</i></p>
-		      </div>
-		      <div class="col-sm-2">
-            <p><i class="fa fa-play"> Google Play</i></p>
-		      </div> -->
+        </div>
+        <div class="container music-store">
+          <ul>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/spotify.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/itunes.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/music_logo.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/googleplay.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/deezer.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/amazon.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/youtube.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/tidal.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/rhapsody.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/emausic.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/rdio.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/mixradio.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/7digital.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/beatportpro.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/junodownload.svg"</img>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img class="img-store" src="img/247.svg"</img>
+              </a>
+            </li>
+          </div>
         </div>
       </div>
     </section>
