--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </p> -->
                         <p class="intro-text-before">
                         <!-- Novembre 2015 -->
-                        
+
                         </p>
                         <a href="#about" class="btn btn-circle page-scroll">
 
@@ -126,7 +126,8 @@
           <div id="music-stream" class="col-lg-8 col-lg-offset-2">
             <p>
               <!-- <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/74292583&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
-              <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;color=ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+              <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;color=ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
+              <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/169600966%3Fsecret_token%3Ds-1x9FZ&amp;color=ff5500&amp;auto_play=true&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
               <!-- <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
             </p>
           </div>
@@ -224,7 +225,6 @@
             <img src="img/souls2.jpg"></img>
             <div class="col-sm-12 col-lg-8 col-lg-offset-2">
                 <h2>Contact Us!</h2>
-                <!-- <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p> -->
                 <p><a href="mailto:soulsellersband@gmail.com">soulsellersband@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
