--- a/index.html
+++ b/index.html
@@ -135,82 +135,82 @@
         <div class="container music-store">
           <ul>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/pfLr2l">
                 <img class="img-store" src="img/spotify.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/7ldkrX">
                 <img class="img-store" src="img/itunes.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/7ldkrX">
                 <img class="img-store" src="img/music_logo.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/yF2Pzw">
                 <img class="img-store" src="img/googleplay.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.deezer.com">
                 <img class="img-store" src="img/deezer.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/ZxHv1I">
                 <img class="img-store" src="img/amazon.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/ILAIo1">
                 <img class="img-store" src="img/youtube.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="goo.gl/5HpDD7">
                 <img class="img-store" src="img/tidal.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.rhapsody.com">
                 <img class="img-store" src="img/rhapsody.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.emusic.com">
                 <img class="img-store" src="img/emausic.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.rdio.com">
                 <img class="img-store" src="img/rdio.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.mixradiomusic.com">
                 <img class="img-store" src="img/mixradio.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.7digital.com">
                 <img class="img-store" src="img/7digital.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.beatport.com">
                 <img class="img-store" src="img/beatportpro.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.junodownload.com">
                 <img class="img-store" src="img/junodownload.svg"</img>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a target="_blank" href="http://www.247entertainment.com">
                 <img class="img-store" src="img/247.svg"</img>
               </a>
             </li>
