--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <ul>
             <li>
               <a target="_blank" href="goo.gl/pfLr2l">
-                <img class="img-store" src="img/spotify.svg"</img>
+                <img class="img-store" src="img/SPOTIFY.svg"</img>
               </a>
             </li>
             <li>
