--- a/index.html
+++ b/index.html
@@ -135,22 +135,22 @@
         <div class="container music-store">
           <ul>
             <li>
-              <a target="_blank" href="goo.gl/pfLr2l">
+              <a target="_blank" href="http://goo.gl/pfLr2l">
                 <img class="img-store" src="img/SPOTIFY.svg"</img>
               </a>
             </li>
             <li>
-              <a target="_blank" href="goo.gl/7ldkrX">
+              <a target="_blank" href="http://goo.gl/7ldkrX">
                 <img class="img-store" src="img/itunes.svg"</img>
               </a>
             </li>
             <li>
-              <a target="_blank" href="goo.gl/7ldkrX">
+              <a target="_blank" href="http://goo.gl/7ldkrX">
                 <img class="img-store" src="img/music_logo.svg"</img>
               </a>
             </li>
             <li>
-              <a target="_blank" href="goo.gl/yF2Pzw">
+              <a target="_blank" href="http://goo.gl/yF2Pzw">
                 <img class="img-store" src="img/googleplay.svg"</img>
               </a>
             </li>
@@ -160,17 +160,17 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="goo.gl/ZxHv1I">
+              <a target="_blank" href="http://goo.gl/ZxHv1I">
                 <img class="img-store" src="img/amazon.svg"</img>
               </a>
             </li>
             <li>
-              <a target="_blank" href="goo.gl/ILAIo1">
+              <a target="_blank" href="http://goo.gl/ILAIo1">
                 <img class="img-store" src="img/youtube.svg"</img>
               </a>
             </li>
             <li>
-              <a target="_blank" href="goo.gl/5HpDD7">
+              <a target="_blank" href="http://goo.gl/5HpDD7">
                 <img class="img-store" src="img/tidal.svg"</img>
               </a>
             </li>
