--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="http://www.deezer.com">
+              <a target="_blank" href="http://goo.gl/giwYQD">
                 <img class="img-store" src="img/deezer.svg"</img>
               </a>
             </li>
