--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="http://www.rhapsody.com">
+              <a target="_blank" href="http://goo.gl/QBqNS8">
                 <img class="img-store" src="img/rhapsody.svg"</img>
               </a>
             </li>
