--- a/index.html
+++ b/index.html
@@ -180,38 +180,8 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="http://www.emusic.com">
+              <a target="_blank" href="http://goo.gl/GULkQt">
                 <img class="img-store" src="img/emausic.svg"</img>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://www.rdio.com">
-                <img class="img-store" src="img/rdio.svg"</img>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://www.mixradiomusic.com">
-                <img class="img-store" src="img/mixradio.svg"</img>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://www.7digital.com">
-                <img class="img-store" src="img/7digital.svg"</img>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://www.beatport.com">
-                <img class="img-store" src="img/beatportpro.svg"</img>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://www.junodownload.com">
-                <img class="img-store" src="img/junodownload.svg"</img>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="http://www.247entertainment.com">
-                <img class="img-store" src="img/247.svg"</img>
               </a>
             </li>
           </div>
