--- a/index.html
+++ b/index.html
@@ -80,17 +80,14 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-8 col-md-offset-2">
                         <h1 class="brand-heading"></h1>
-                        <!-- <p class="intro-text">
-                            <iframe width="100%" height="480" src="" frameborder="0" allowfullscreen></iframe>
-                        </p> -->
+                        <p class="intro-text">
+                          <iframe width="100%" height="480" src="https://www.youtube.com/embed/EXaYywYp6wg?autoplay=1&rel=0&vq=hd1080" frameborder="0" allowfullscreen></iframe>
+                        </p>
                         <p class="intro-text-before">
                         <!-- Novembre 2015 -->
-
                         </p>
                         <a href="#about" class="btn btn-circle page-scroll">
-
                             <i class="fa fa-angle-double-down animated"></i>
-
                         </a>
 
                     </div>
@@ -127,7 +124,7 @@
             <p>
               <!-- <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/74292583&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
               <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;color=ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
-              <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/169600966%3Fsecret_token%3Ds-1x9FZ&amp;color=ff5500&amp;auto_play=true&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+              <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/169600966%3Fsecret_token%3Ds-1x9FZ&amp;color=ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
               <!-- <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230455096&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
             </p>
           </div>
